--- a/EXPRESS JS/Web server express js/index.html
+++ b/EXPRESS JS/Web server express js/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>hello yohoohooho</h1>
+    <h3>Links</h3>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/contact">Contact</a></li>
+    </ul>
 </body>
 </html>
