--- a/REACT JS/latih1/index.html
+++ b/REACT JS/latih1/index.html
@@ -12,14 +12,10 @@
   <body>
     <div id="root"></div>
     <script type="text/babel">
-    
-      function MyApp() {
-        return <h1>Hello, world!</h1>;
-      }
 
       const container = document.getElementById('root');
       const root = ReactDOM.createRoot(container);
-      root.render(<MyApp />);
+      root.render(<h1>Belajar react js 🚀</h1>);
 
     </script>
 
