--- a/REACT JS/latih1/index.html
+++ b/REACT JS/latih1/index.html
@@ -16,14 +16,14 @@
       const container = document.getElementById('root');
       const root = ReactDOM.createRoot(container);
 
-      function Header(props){
-        return(<h1>Belajar react js bareng {props.author} 🚀</h1>)
+      function Header({author}){
+        return(<h1>Belajar react js bareng {author ? author : "Fadil"} 🚀</h1>)
       }
 
       function HomePage(){
         return(
           <>
-            <Header author="Fadil" />
+            <Header />
             <Header author="Lelouch" />
           </>
         )
