--- a/REACT JS/latih1/index.html
+++ b/REACT JS/latih1/index.html
@@ -21,11 +21,16 @@
       }
 
       function HomePage(){
+        const kuronoKishidan = ['Zero', 'kallen', 'ohgi']
         return(
-          <>
-            <Header />
-            <Header author="Lelouch" />
-          </>
+          <div>
+            <Header/>
+            <ul>
+              {kuronoKishidan.map((kuroKishi) => (
+                <li key={kuroKishi}>{kuroKishi}</li>
+            ))}
+            </ul>  
+          </div>
         )
       }
 
